# andrudio

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/debug/resources/: logging.properties
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/resources/: logging.properties
app/src/resources/: logging.properties
demo/: .gitignore  .project  AndroidManifest.xml  build.gradle  demo.apk  keystore  project.properties
demo/res/layout/: activity_main.xml  url_test.xml
demo/res/menu/: main.xml
demo/res/values/: constants.xml  ids.xml  strings.xml  styles.xml
demo/res/values-v11/: styles.xml
demo/scripts/: applyversion  build_release
demo/src/danbroid/andrudio/demo/: MainActivity.java
demo/src/danbroid/libavplayer/demo/: MainActivity.java
demo/src/main/res/layout/: activity_main.xml  (+1 more)
ffmpeg/: arm64-v8a.sh  armeabi-v7a.sh  armeabi.sh  build.sh  common.sh  flags.sh  print_settings.sh  settings.txt  x86.sh  x86_64.sh
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/androidTest/java/danbroid/andrudio/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/java/danbroid/andrudio/: AbstractAudioPlayer.java  AndroidAudioPlayer.java  AndrudioMediaPlayer.java  LibAndrudio.java
lib/src/main/native/: andrudio.c  audioplayer.c  audioplayer.h  logging.h  player_thread.c
lib/src/main/res/values/: strings.xml
lib/src/test/java/danbroid/andrudio/: ExampleUnitTest.java
scripts/: build_release  upload_archives
test/: main.c  test.sh
(+6 files in other folders)
